--- a/03enter-right.html
+++ b/03enter-right.html
@@ -78,9 +78,10 @@
                 <li><a href="#login" title="登入" data-uk-modal="{center:true}"><i class="fas fa-user-circle uk-margin-small-right"></i>登入</a></li>
                 <li class="uk-nav-divider"></li>
                 <li><a href="#" title="#">資料庫</a></li>
-                <li><a href="#" title="#">電子期刊</a></li>
                 <li><a href="#" title="#">電子書</a></li>
+                <li><a href="#" title="#">電子期刊</a></li>
                 <li><a href="#" title="#">網路資源</a></li>
+                <li><a href="#" title="#">書目管理者軟體</a></li>
                 <li><a href="#" title="#">我的資源</a></li>
               </ul>
             </nav>
