--- a/04plussearch-right.html
+++ b/04plussearch-right.html
@@ -80,9 +80,10 @@
                 <li><a href="#login" title="登入" data-uk-modal="{center:true}"><i class="fas fa-user-circle uk-margin-small-right"></i>登入</a></li>
                 <li class="uk-nav-divider"></li>
                 <li><a href="#" title="#">資料庫</a></li>
-                <li><a href="#" title="#">電子期刊</a></li>
                 <li><a href="#" title="#">電子書</a></li>
+                <li><a href="#" title="#">電子期刊</a></li>
                 <li><a href="#" title="#">網路資源</a></li>
+                <li><a href="#" title="#">書目管理者軟體</a></li>
                 <li><a href="#" title="#">我的資源</a></li>
               </ul>
             </nav>
@@ -93,15 +94,27 @@
           <nav class="nav_dropdown_center uk-text-center uk-text-contrast uk-visible-large">
             <div class="uk-button-dropdown" data-uk-dropdown>
               <a class="active fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">資料庫</a>
-            </div>
-            <div class="uk-button-dropdown" data-uk-dropdown>
-              <a class="fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">電子期刊</a>
+              <!-- <div class="bg_transparent border_remove borderRadius0 uk-dropdown uk-dropdown-bottom uk-padding-remove">
+                  <div class="padding_large uk-position-relative">
+                    <div class="bg_secondary uk-overlay-panel"></div>
+                    <ul class="uk-nav uk-nav-dropdown uk-text-contrast uk-text-left uk-position-relative uk-position-z-index">
+                      <li><a class="hover_bg_primary uk-dropdown-close" href="#" title="#"><i class="fas fa-angle-right fa-fw uk-margin-small-right"></i>Item</a></li>
+                      <li><a class="hover_bg_primary uk-dropdown-close" href="#" title="#"><i class="fas fa-angle-right fa-fw uk-margin-small-right"></i>Item</a></li>
+                    </ul>
+                  </div>
+                </div> -->
             </div>
             <div class="uk-button-dropdown" data-uk-dropdown>
               <a class="fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">電子書</a>
             </div>
             <div class="uk-button-dropdown" data-uk-dropdown>
+              <a class="fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">電子期刊</a>
+            </div>
+            <div class="uk-button-dropdown" data-uk-dropdown>
               <a class="fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">網路資源</a>
+            </div>
+            <div class="uk-button-dropdown" data-uk-dropdown>
+              <a class="fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">書目管理者軟體</a>
             </div>
             <div class="uk-button-dropdown" data-uk-dropdown>
               <a class="fontSize1_2 padding_small paddingLR_medium uk-display-inline-block uk-text-bold" href="#" title="#">我的資源</a>
